--- a/views/home.hbs
+++ b/views/home.hbs
@@ -11,6 +11,17 @@
 		{{> header}}
 	</div>
 	<p>{{screamIt welcomeMessage}}</p>
+
+	<script src="socket.io/socket.io.js">
+		var socket = io();
+		socket.on('connect', () => {
+			console.log('user connected'); 
+		});
+	socket.on('disconnect', () => {
+			console.log('user disconnected'); 
+		});
+
+	</script>
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 	<script type="text/javascript">
 
@@ -36,7 +47,7 @@ axios.get(geocodedUrl).then((response) => {
 	document.getElementById("car").innerHTML = ("Your darksky url is " + weather);
 	
 	
-	return axios.get(weather);
+	return axios.put(weather);
 
 
 
